--- a/deviation_detection.ipynb
+++ b/deviation_detection.ipynb
@@ -83,9 +83,9 @@
    "id": "d32dde36-4d89-405c-a95c-5f1cf0b41ed8",
    "metadata": {},
    "source": [
-    "## Train on time intervals after confirmed washing events\n",
+    "## Train on time intervals after reference points (washing events in this specific scenario)\n",
     "At this point we are going to fit our linear model to region after some specific refrence points in the time series. We assume that for a window of $ w\\_train $ days after each point, the time series exhibits the behaviour we want to learn (Operation of the solar panels while they are clean in this specific scenario). \n",
-    "We also keep a subset of the points in those regions as a validation set in order to check how well our model learned that specific behaviour."
+    "We also keep a subset of the points in those regions as a validation set in order to check how well our model learned that specific behaviour. In order to obtain the training and the validation sets we merge the windows after each reference point, shuffle the entire resulting set and take 80% as the training and 20% as the validation set. The features we use and the target variable are usually domain specific."
    ]
   },
   {
@@ -98,6 +98,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "The number of reference points (washing events in this case) is : 5 \n",
+      "\n",
       "Training Metrics:\n",
       "MAE:0.009 \n",
       "ME(true-pred):-0.000 \n",
@@ -117,6 +119,7 @@
    "source": [
     "w_train = 30\n",
     "ref_points = pd.Index(['2021-04-19 00:00:00', '2020-10-26 00:00:00', '2020-06-05 00:00:00', '2019-07-29 00:00:00', '2019-05-28 00:00:00'])\n",
+    "print(f'The number of reference points (washing events in this case) is : {len(ref_points)} \\n')\n",
     "feats =  ['irradiance', 'mod_temp', 'perf_index']\n",
     "target = 'power'\n",
     "model, training_scores, validation_scores = train_on_reference_points(df, w_train, ref_points, feats, target)"
@@ -394,10 +397,24 @@
       "needs_background": "light"
      },
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The average quality measures on all the above cases are:\n",
+      "MAE:0.020  \n",
+      "ME(true-pred):-0.013 \n",
+      "MAPE:0.037 \n",
+      "MPE: -0.023 \n",
+      "R2: 0.981\n",
+      "\n"
+     ]
     }
    ],
    "source": [
     "indices = get_top_deviations(scores, 'mpe')\n",
+    "\n",
     "\n",
     "for n, i in enumerate(indices):\n",
     "    d1, window_after= windows[i]\n",
@@ -428,7 +445,10 @@
     "    plt.plot(line, linestyle='dashed', alpha = 0.2)\n",
     "    plt.legend()\n",
     "    plt.show()\n",
-    "     \n",
+    "\n",
+    "avg_scores = scores[indices].mean(axis=0)  # column wise mean for each score\n",
+    "print('The average quality measures on all the above cases are:')\n",
+    "print(f'MAE:{avg_scores[1]:.3f}  \\nME(true-pred):{avg_scores[2]:.3f} \\nMAPE:{avg_scores[3]:.3f} \\nMPE: {avg_scores[4]:.3f} \\nR2: {avg_scores[0]:.3f}\\n')\n",
     "\n",
     "    \n",
     " "
