--- a/deviation_detection.ipynb
+++ b/deviation_detection.ipynb
@@ -415,6 +415,7 @@
    "source": [
     "indices = get_top_deviations(scores, 'mpe')\n",
     "\n",
+    "slopes = []\n",
     "\n",
     "for n, i in enumerate(indices):\n",
     "    d1, window_after= windows[i]\n",
@@ -440,6 +441,7 @@
     "        continue\n",
     "    diff = (df_strings_clean.loc[d1:window_after].power - preds).rolling(roll).mean().dropna().values\n",
     "    line , slope, _ = get_line_and_slope(diff)\n",
+    "    slopes.append(slope)\n",
     "    \n",
     "    plt.plot(diff, label=f\"True Power - Expected Power (slope = {slope:.3g})\")\n",
     "    plt.plot(line, linestyle='dashed', alpha = 0.2)\n",
@@ -450,25 +452,119 @@
     "print('The average quality measures on all the above cases are:')\n",
     "print(f'MAE:{avg_scores[1]:.3f}  \\nME(true-pred):{avg_scores[2]:.3f} \\nMAPE:{avg_scores[3]:.3f} \\nMPE: {avg_scores[4]:.3f} \\nR2: {avg_scores[0]:.3f}\\n')\n",
     "\n",
-    "    \n",
+    "windows = np.array(windows)\n",
+    "df_stats = pd.DataFrame.from_dict({'Score (Mean Percentage Error)':scores[indices, 4],\n",
+    "                                   'Window Starting Date': windows[indices, 0],\n",
+    "                                   'Window Ending Date': windows[indices, 1],\n",
+    "                                   'Slope': slopes})\n",
     " "
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e7d485e1-fd08-441b-af25-37f8ba6ca860",
+   "cell_type": "markdown",
+   "id": "e9f0f883-1401-4949-ba83-f10d836b5861",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Table of stats for the top cases"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "8524f14f-efa4-4a38-9a1b-105db41f56b8",
+   "execution_count": 6,
+   "id": "e7d485e1-fd08-441b-af25-37f8ba6ca860",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Score (Mean Percentage Error)</th>\n",
+       "      <th>Window Starting Date</th>\n",
+       "      <th>Window Ending Date</th>\n",
+       "      <th>Slope</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>-0.029248</td>\n",
+       "      <td>2020-01-26 10:00:00</td>\n",
+       "      <td>2020-04-25 10:00:00</td>\n",
+       "      <td>0.000008</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>-0.028984</td>\n",
+       "      <td>2019-12-27 10:00:00</td>\n",
+       "      <td>2020-03-26 10:00:00</td>\n",
+       "      <td>-0.000006</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>-0.025145</td>\n",
+       "      <td>2019-11-27 10:00:00</td>\n",
+       "      <td>2020-02-25 10:00:00</td>\n",
+       "      <td>-0.000015</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>-0.016539</td>\n",
+       "      <td>2021-05-20 10:00:00</td>\n",
+       "      <td>2021-08-18 10:00:00</td>\n",
+       "      <td>-0.000009</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>-0.016132</td>\n",
+       "      <td>2021-06-19 10:00:00</td>\n",
+       "      <td>2021-09-17 10:00:00</td>\n",
+       "      <td>0.000007</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Score (Mean Percentage Error) Window Starting Date  Window Ending Date  \\\n",
+       "0                      -0.029248  2020-01-26 10:00:00 2020-04-25 10:00:00   \n",
+       "1                      -0.028984  2019-12-27 10:00:00 2020-03-26 10:00:00   \n",
+       "2                      -0.025145  2019-11-27 10:00:00 2020-02-25 10:00:00   \n",
+       "3                      -0.016539  2021-05-20 10:00:00 2021-08-18 10:00:00   \n",
+       "4                      -0.016132  2021-06-19 10:00:00 2021-09-17 10:00:00   \n",
+       "\n",
+       "      Slope  \n",
+       "0  0.000008  \n",
+       "1 -0.000006  \n",
+       "2 -0.000015  \n",
+       "3 -0.000009  \n",
+       "4  0.000007  "
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_stats"
+   ]
   }
  ],
  "metadata": {
